// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot of SliderContent (examples) 1`] = `
<div>
  <ul
    className="menu examples"
    id="examples-menu"
  >
    <li
      className="examplesitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure"
              target="_top"
            >
              <img
                alt="Azure"
                src="https://avatars0.githubusercontent.com/u/6844498?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure/MachineLearningSamples-PredictiveMaintenance"
                target="_top"
              >
                MachineLearningSamples-PredictiveMaintenance
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              MachineLearningSamples-PredictiveMaitenance
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-PredictiveMaintenance/network"
                target="_top"
              >
                <strong>
                  30
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-PredictiveMaintenance/stargazers"
                target="_top"
              >
                <strong>
                  34
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="examplesitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure"
              target="_top"
            >
              <img
                alt="Azure"
                src="https://avatars0.githubusercontent.com/u/6844498?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure/MachineLearningSamples-SentimentAnalysis"
                target="_top"
              >
                MachineLearningSamples-SentimentAnalysis
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              MachineLearningSamples-SentimentAnalysis
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-SentimentAnalysis/network"
                target="_top"
              >
                <strong>
                  19
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-SentimentAnalysis/stargazers"
                target="_top"
              >
                <strong>
                  28
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="examplesitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure"
              target="_top"
            >
              <img
                alt="Azure"
                src="https://avatars0.githubusercontent.com/u/6844498?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure/MachineLearningSamples-ChurnPrediction"
                target="_top"
              >
                MachineLearningSamples-ChurnPrediction
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              MachineLearningSamples-ChurnPrediction
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-ChurnPrediction/network"
                target="_top"
              >
                <strong>
                  24
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-ChurnPrediction/stargazers"
                target="_top"
              >
                <strong>
                  20
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="examplesitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure"
              target="_top"
            >
              <img
                alt="Azure"
                src="https://avatars0.githubusercontent.com/u/6844498?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure/MachineLearningSamples-BiomedicalEntityExtraction"
                target="_top"
              >
                MachineLearningSamples-BiomedicalEntityExtraction
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              MachineLearningSamples-BiomedicalEntityExtraction
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-BiomedicalEntityExtraction/network"
                target="_top"
              >
                <strong>
                  18
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-BiomedicalEntityExtraction/stargazers"
                target="_top"
              >
                <strong>
                  32
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="examplesitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure"
              target="_top"
            >
              <img
                alt="Azure"
                src="https://avatars0.githubusercontent.com/u/6844498?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure/MachineLearningSamples-QnAMatching"
                target="_top"
              >
                MachineLearningSamples-QnAMatching
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              MachineLearningSamples-QnAMatching
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-QnAMatching/network"
                target="_top"
              >
                <strong>
                  12
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-QnAMatching/stargazers"
                target="_top"
              >
                <strong>
                  13
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="examplesitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure"
              target="_top"
            >
              <img
                alt="Azure"
                src="https://avatars0.githubusercontent.com/u/6844498?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure/MachineLearningSamples-AerialImageClassification"
                target="_top"
              >
                MachineLearningSamples-AerialImageClassification
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              MachineLearningSamples-AerialImageClassification 
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-AerialImageClassification/network"
                target="_top"
              >
                <strong>
                  5
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure/MachineLearningSamples-AerialImageClassification/stargazers"
                target="_top"
              >
                <strong>
                  11
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
  </ul>
  <div
    class="paddles"
  >
    <button
      class="left-paddle paddle hidden"
      id="examples-left"
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      class="right-paddle paddle"
      id="examples-right"
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
</div>
`;

exports[`renders a snapshot of SliderContent (models) 1`] = `
<div>
  <ul
    className="menu models"
    id="models-menu"
  >
    <li
      className="modelsitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure-Samples"
              target="_top"
            >
              <img
                alt="Azure-Samples"
                src="https://avatars2.githubusercontent.com/u/1844662?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure-Samples/AI-Gallery-InceptionV3"
                target="_top"
              >
                AI-Gallery-InceptionV3
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              Example demonstrating using an Inception model in Azure Machine Learning.
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure-Samples/AI-Gallery-InceptionV3/network"
                target="_top"
              >
                <strong>
                  1
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure-Samples/AI-Gallery-InceptionV3/stargazers"
                target="_top"
              >
                <strong>
                  0
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="modelsitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/Azure-Samples"
              target="_top"
            >
              <img
                alt="Azure-Samples"
                src="https://avatars2.githubusercontent.com/u/1844662?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//Azure-Samples/AI-Gallery-TinyYolo"
                target="_top"
              >
                AI-Gallery-TinyYolo
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              This repository contains code which demonstrates how to deploy and use the TinyYolo model in Azure Machine Learning.
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//Azure-Samples/AI-Gallery-TinyYolo/network"
                target="_top"
              >
                <strong>
                  0
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//Azure-Samples/AI-Gallery-TinyYolo/stargazers"
                target="_top"
              >
                <strong>
                  1
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
    <li
      className="modelsitem item"
    >
      <div>
        <div
          className="github-card repo-card"
        >
          <div
            className={
              Array [
                "header",
              ]
            }
          >
            <a
              className="avatar"
              href="https://github.com/onnx"
              target="_top"
            >
              <img
                alt="onnx"
                src="https://avatars3.githubusercontent.com/u/31675368?v=4"
              />
            </a>
            <h1>
              <a
                className="wordwrap"
                href="https://www.github.com//onnx/models"
                target="_top"
              >
                models
              </a>
            </h1>
          </div>
          <div
            className="content"
          >
            <p>
              The ONNX Model Zoo is a collection of pre-trained, state-of-the-art models in the ONNX format 
            </p>
          </div>
          <ul
            className="status"
          >
            <li>
              <a
                href="https://www.github.com//onnx/models/network"
                target="_top"
              >
                <strong>
                  93
                </strong>
                Forks
              </a>
            </li>
            <li>
              <a
                href="https://www.github.com//onnx/models/stargazers"
                target="_top"
              >
                <strong>
                  494
                </strong>
                Stars
              </a>
            </li>
          </ul>
        </div>
      </div>
    </li>
  </ul>
  <div
    class="paddles"
  >
    <button
      class="left-paddle paddle hidden"
      id="models-left"
      onClick={[Function]}
    >
      &lt;
    </button>
    <button
      class="right-paddle paddle"
      id="models-right"
      onClick={[Function]}
    >
      &gt;
    </button>
  </div>
</div>
`;
